--- a/allblobstore/pom.xml
+++ b/allblobstore/pom.xml
@@ -54,6 +54,11 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.apache.jclouds.provider</groupId>
+      <artifactId>joyent</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.jclouds.api</groupId>
       <artifactId>atmos</artifactId>
       <version>${project.version}</version>
