--- a/providers/pom.xml
+++ b/providers/pom.xml
@@ -72,5 +72,6 @@
     <module>aws-route53</module>
     <module>ultradns-ws</module>
     <module>dynect</module>
+    <module>joyent</module>
   </modules>
 </project>
